Add index and login page and other pages including error

--- a/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/templates/fragments.html
+++ b/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/templates/fragments.html
@@ -16,7 +16,7 @@
 <body>
 
 	<div th:fragment="footer" class="text-center m-3">
-		<p>Shopme Control Panel - Copyright &copy; Shopme</p>
+		<p>Sporyt shoe Control Panel - Copyright &copy; Sporty shoe</p>
 	</div>
 	
 	<th th:fragment="column_link(fieldName, columnLabel, removeTag)" th:remove="${removeTag}">
