--- a/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/templates/login.html
+++ b/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/templates/login.html
@@ -24,7 +24,7 @@
 		</div>
 		
 		<div class="border border-secondary rounded p-3">
-			<p>Access to Shopme Control Panel</p>
+			<p>Access to Sporty shoe Control Panel</p>
 			<p>
 				<input type="email" name="email" class="form-control" placeholder="E-mail" required />
 			</p>
