--- a/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/templates/index.html
+++ b/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 <div class="container-fluid">
 	<div th:replace="navigation :: menu"></div>
 	<div>
-		<h2>Shopme Control Panel</h2>
+		<h2>Sporty shoe Control Panel</h2>
 		Welcome 
 		<a th:href="@{/account}" 
 			sec:authentication="principal.fullname"></a>	
