Code user management module

--- a/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/templates/login.html
+++ b/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
 <div class="container-fluid text-center">
 
 	<div>
-		<img th:src="@{/images/ShopmeAdminBig.png}" class="img-fluid" />
+		<img th:src="@{/images/logo.jpg}" class="img-fluid" />
 	</div>
 	
 	<form th:action="@{/login}" method="post" style="max-width: 350px; margin: 0 auto">
@@ -41,7 +41,7 @@
 	</form>
 	
 	<div>
-		<p>Sporty shoe Control Panel - Copyright &copy; Sporty shoe</p>
+		<p>Sporty Shoe Control Panel - Copyright &copy; Sporty Shoe</p>
 	</div>
 	
 </div>
