--- a/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/templates/navigation.html
+++ b/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/templates/navigation.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org">
+
 <body>
 <div th:fragment="menu">
 	<form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
@@ -7,7 +9,7 @@
 	</form>
 	<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 		<a class="navbar-brand" th:href="@{/}">
-			<img th:src="@{/images/ShopmeAdminSmall.png}" />
+			<img th:src="@{/images/logo.jpg}" />
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
 			<span class="navbar-toggler-icon"></span>
