--- a/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/templates/users/user_form.html
+++ b/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/templates/users/user_form.html
@@ -67,7 +67,7 @@
 			</div>
 		</div>
 
-		<!--
+
 		<div class="form-group row">
 			<label class="col-sm-4 col-form-label">Photos:</label>
 			<div class="col-sm-8">
@@ -77,7 +77,7 @@
 				<img id="thumbnail" alt="Photos preview" th:src="@{${user.photosImagePath}}"
 					class="img-fluid" />
 			</div>
-		</div>	-->
+		</div>
 				
 		<div class="text-center">
 			<input type="submit" value="Save" class="btn btn-primary m-3" />
