--- a/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/templates/error.html
+++ b/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/templates/error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head th:replace="fragments :: page_head('Error - Sporty shoe Admin', 'none')" />
+<head th:replace="fragments :: page_head('Error - Sporty Shoe Admin', 'none')" />
 </head>
 <body>
 <div class="container-fluid">
