Code home page for shopping application

--- a/SportyShoeProject/SportyshoeWebParent/FrontEnd/src/main/resources/templates/error.html
+++ b/SportyShoeProject/SportyshoeWebParent/FrontEnd/src/main/resources/templates/error.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments :: page_head('Error - Shopme', 'none')" />
+<head th:replace="fragments :: page_head('Error - Sporty Shoe', 'none')" />
 </head>
 <body>
 <div class="container-fluid">
