--- a/SportyShoeProject/SportyshoeWebParent/FrontEnd/src/main/resources/templates/navigation.html
+++ b/SportyShoeProject/SportyshoeWebParent/FrontEnd/src/main/resources/templates/navigation.html
@@ -4,7 +4,7 @@
 <div th:fragment="header_menu">
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <a class="navbar-brand" th:href="@{/}">
-      <img th:src="@{/images/Logo.png}" />
+      <img th:src="@{/images/logo.jpg}" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar, #searchNavbar">
       <span class="navbar-toggler-icon"></span>
