Code search product function and completion of home page for the shopping application

--- a/SportyShoeProject/SportyshoeWebParent/FrontEnd/src/main/resources/templates/product/product_detail.html
+++ b/SportyShoeProject/SportyshoeWebParent/FrontEnd/src/main/resources/templates/product/product_detail.html
@@ -33,12 +33,12 @@
 			</div>
 			<div>
 				List Price:
-				<span th:if="${product.discountPercent <= 0}">$ [[${product.price}]]</span>
-				<del th:if="${product.discountPercent > 0}"><span>$ [[${product.price}]]</span></del>
+				<span th:if="${product.discountPercent <= 0}">UGX [[${product.price}]]</span>
+				<del th:if="${product.discountPercent > 0}"><span>UGX [[${product.price}]]</span></del>
 			</div>
 			<div th:if="${product.discountPercent > 0}">
 				Price:
-				<span style="font-size: larger; color: darkred">$ [[${product.discountPrice}]]</span>
+				<span style="font-size: larger; color: darkred">UGX [[${product.discountPrice}]]</span>
 				([[${product.discountPercent}]] % off)
 			</div>
 			<div>&nbsp;</div>
