--- a/SportyShoeProject/SportyshoeWebParent/FrontEnd/src/main/resources/templates/product/product_fragment.html
+++ b/SportyShoeProject/SportyshoeWebParent/FrontEnd/src/main/resources/templates/product/product_fragment.html
@@ -10,11 +10,11 @@
 		</a>
 	</div>
 	<div th:if="${product.discountPercent <= 0}">
-		<span>$ [[${product.price}]]</span>
+		<span>UGX [[${product.price}]]</span>
 	</div>
 	<div th:if="${product.discountPercent > 0}">
-		<span style="font-size: larger; color: darkred">$ [[${product.discountPrice}]]</span>
-		<del><span>$ [[${product.price}]]</span></del>
+		<span style="font-size: larger; color: darkred">UGX [[${product.discountPrice}]]</span>
+		<del><span>UGX [[${product.price}]]</span></del>
 	</div>				
 </div>
 </body>
